--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,18 @@
 // Navigation code here
+
+nav {
+    .layout(row, space-between, flex-end);
+    .sizing(30%, 30px);
+
+    @media @phone {
+        .sizing(80%, 30px);
+    }
+
+    a {
+        font-size: 1.7rem;
+        text-decoration: none;
+        color: black;
+        flex-wrap: nowrap;
+        
+    }
+}
